--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -1,4 +1,12 @@
 .wrapper {
+
+}
+
+.auth-wrapper {
+    background: rgb(55,150,131);
+    background: linear-gradient(79deg, rgba(55,150,131,1) 0%, rgba(142,228,175,1) 61%);
+    min-height: 100vh;
+    padding: 15rem;
 }
 
 .auth {
@@ -9,9 +17,9 @@
     justify-content: space-between;
     width: 50rem;
     height: 60rem;
-    padding: 30px 60px 20px 60px;
+    padding: 3rem 6rem 2rem 6rem;
     text-align: center;
-    margin-top: 15rem;
     box-shadow: var(--shadow-dark);
-    border-radius: 10px;
+    border-radius: 1rem;
+    background: #fff;
 }
