--- a/src/WebUI/ClientApplication/src/styles/_components.scss
+++ b/src/WebUI/ClientApplication/src/styles/_components.scss
@@ -5,7 +5,19 @@
     flex-direction: column;
 
     &__heading {
+        position: relative;
+
+        &__icon {
+            position: absolute;
+            height: 4.5rem;
+            width: 4.5rem;
+            top: 2.2rem;
+            left: 4.5rem;
+            fill: var(--color-grey-dark-1);
+        }
+
         h1 {
+            padding-left: 4rem;
             font-size: 3rem;
             margin: 2rem 0;
             color: var(--color-grey-dark-1);
@@ -73,4 +85,27 @@
             background: var(--color-grey-dark-2);
         }
     }
+}
+
+/////////////////////////////////
+//////// AUTH BOTTOM TEXT
+.auth-bottom-text {
+    &__link {
+        text-decoration: none;
+        color: var(--color-green-dark);
+        font-weight: 700;
+    }
+}
+
+/////////////////////////////////
+//////// INVALID Form
+.invalid {
+    color: red;
+    font-size: 1.3rem;
+    text-align: left;
+    padding-left: 1rem;
+}
+
+.is-invalid {
+    border: .1rem solid red;
 }
