Create and style side navigation

--- a/src/WebUI/ClientApplication/src/styles/_base.scss
+++ b/src/WebUI/ClientApplication/src/styles/_base.scss
@@ -11,6 +11,11 @@
     --color-grey-dark-2: rgb(175, 175, 175);
     --color-grey-dark-3: rgb(236, 236, 236);
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+
+    --color-blue-main: #4984fb;
+    --color-blue-main-darker: #3a6ac9;
+    --color-blue-secondary: #70abeb;
+    --color-grey-background: #F2F3F7;
 }
 
 
