--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -3,13 +3,23 @@
 }
 
 .auth-wrapper {
+    @media only screen and (max-width: 600px) {
+        padding: 6rem 1.5rem;
+    }
+
     background: rgb(55,150,131);
     background: linear-gradient(79deg, rgba(55,150,131,1) 0%, rgba(142,228,175,1) 61%);
     min-height: 100vh;
-    padding: 15rem;
+    padding: 15rem 0;
 }
 
 .auth {
+    @media only screen and (max-width: 600px) {
+        width: 40rem;
+        padding: 1.5rem 3rem 1rem 3rem;
+        height: 55rem;
+    }
+
     font-size: 1.4rem;
     margin: 0 auto;
     display: flex;
@@ -22,4 +32,25 @@
     box-shadow: var(--shadow-dark);
     border-radius: 1rem;
     background: #fff;
+}
+
+//////////////////////
+///// HOME LAYOUT
+
+.home-wrapper {
+    height: 100vh;
+}
+
+.navbar {
+    position: fixed;
+    height: 100%;
+    width: 250px;
+    background-color: var(--color-blue-main);
+}
+
+.main-content {
+    padding-left: 300px;
+    height: 100%;
+    width: 100%;
+    background-color: var(--color-grey-background);
 }
