--- a/src/WebUI/ClientApplication/src/app/timer/timer.component.html
+++ b/src/WebUI/ClientApplication/src/app/timer/timer.component.html
@@ -1,1 +1,22 @@
-<p>timer works!</p>
+<div class="timer">
+    <div class="timer-project">
+        <svg class="timer-project__icon">
+            <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
+        </svg>
+        <p class="timer-project__text">Choose projec</p>
+        <select class="timer-project__select">
+            <option class="timer-project__item" value="volvo">Project 1</option>
+            <option class="timer-project__item" value="volvo">Project 2</option>
+        </select>
+    </div>
+    <div class="timer-time-info">
+        <svg class="timer-time-info__icon">
+            <use xlink:href="../assets/sprite.svg#icon-clock"></use>
+        </svg>
+        <p class="timer-time-info__time">12:00</p>
+        <button class="timer-time-info__btn">START</button>
+        <svg class="timer-time-info__icon-trash">
+            <use xlink:href="../assets/sprite.svg#icon-trash"></use>
+        </svg>
+    </div>
+</div>
