Change Project entity to include Tasks and add tasks to DbContext

--- a/src/WebUI/ClientApplication/src/app/projects/projects-create/projects-create.component.html
+++ b/src/WebUI/ClientApplication/src/app/projects/projects-create/projects-create.component.html
@@ -26,4 +26,5 @@
     </div>
     
     <button class="create-form__btn" type="submit">CREATE</button>
+    <a class="create-form__link" [routerLink]="['/app/projects']">Go back..</a>
 </form>
