Create modal component

--- a/src/WebUI/ClientApplication/src/app/home/home.component.html
+++ b/src/WebUI/ClientApplication/src/app/home/home.component.html
@@ -24,11 +24,11 @@
                 </a>
             </li>
             <li class="navbar-menu__item">
-                <a href="#" class="navbar-menu__link">
+                <a [routerLink]="['/app/tasks']" routerLinkActive="navbar-menu__active" class="navbar-menu__link">
                     <svg class="navbar-menu__icon">
                         <use xlink:href="../assets/sprite.svg#icon-map"></use>
                     </svg>
-                    Stastiticts
+                    Tasks
                 </a>
             </li>
             <li class="navbar-menu__item">
