--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -107,3 +107,10 @@
     font-size: 1.6rem;
     margin-bottom: 3rem;
 }
+
+////////////////////
+///// Tasks
+.tasks {
+    display: flex;
+    justify-content: space-between;
+}
