--- a/src/WebUI/ClientApplication/src/styles/_base.scss
+++ b/src/WebUI/ClientApplication/src/styles/_base.scss
@@ -1,7 +1,7 @@
 :root {
-    --color-green: #5CDB95;
+    --color-green: rgb(48, 199, 116);
     --color-green-light: #8EE4AF;
-    --color-green-dark: #379683;
+    --color-green-dark: rgb(35, 185, 103);
     --color-blue-dark: #05386B;  
     --color-light: #EDF5E1;
     
@@ -16,6 +16,9 @@
     --color-blue-main-darker: #3a6ac9;
     --color-blue-secondary: #70abeb;
     --color-grey-background: #F2F3F7;
+
+    --color-red: rgb(199, 60, 60);
+    --color-red-dark: rgb(184, 53, 53);
 }
 
 
