--- a/src/WebUI/ClientApplication/src/styles/_components.scss
+++ b/src/WebUI/ClientApplication/src/styles/_components.scss
@@ -110,7 +110,7 @@
     color: red;
     font-size: 1.3rem;
     text-align: left;
-    padding-left: 1rem;
+    margin: 1rem 0;
 }
 
 .is-invalid {
@@ -368,6 +368,25 @@
     }
 }
 
+///////////////////////////
+/////// CREATE-TASK-BUTTON
+.create-task-btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 3rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    text-decoration: none;
+    background: var(--color-green);
+    border-radius: .5rem;
+
+    &:hover {
+        background: var(--color-green-dark);
+    }
+}
+
 
 ///////////////////////////
 /////// TASK-CATEGORY
@@ -379,5 +398,26 @@
     &__heading {
         padding: 2rem;
         text-align: center;
+    }
+}
+
+////////////////////////////
+//////// CREATE-TASK-FORM
+.create-task-form {
+
+    &__heading {
+        font-size: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    &__input {
+        padding: 1rem 2rem;
+        width: 100%;
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+    }
+
+    &__btn-close {
+        margin-left: 1.5rem;
     }
 }
