Username is showing on top bar

--- a/src/WebUI/ClientApplication/src/app/home/home.component.html
+++ b/src/WebUI/ClientApplication/src/app/home/home.component.html
@@ -45,7 +45,7 @@
         <div class="top-info">
             <div class="top-info-user">
                 <img class="top-info-user__image" src="../../assets/img/profile.png" alt="profile picture">   
-                <p class="top-info-user__username">Vladimir</p>
+                <p class="top-info-user__username">{{ username }}</p>
             </div>
         </div>
         <div class="section-wrapper">
