--- a/src/WebUI/ClientApplication/src/styles/_base.scss
+++ b/src/WebUI/ClientApplication/src/styles/_base.scss
@@ -19,6 +19,9 @@
 
     --color-red: rgb(199, 60, 60);
     --color-red-dark: rgb(184, 53, 53);
+
+    --color-yellow: rgb(238, 241, 22);
+    --color-yellow-dark: rgb(213, 216, 19);
 }
 
 
