--- a/src/WebUI/ClientApplication/src/styles/_components.scss
+++ b/src/WebUI/ClientApplication/src/styles/_components.scss
@@ -381,6 +381,7 @@
     text-decoration: none;
     background: var(--color-green);
     border-radius: .5rem;
+    margin: 0 2rem 0 0;
 
     &:hover {
         background: var(--color-green-dark);
