--- a/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
+++ b/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
@@ -23,7 +23,9 @@
                 <h4>Todo</h4>
             </div>
             <div class="task-category__body">
-    
+                <div class="task-item">
+                    <p class="task-item__title">Task 1</p>
+                </div>
             </div>
         </div>
     
