--- a/src/WebUI/ClientApplication/src/styles/_components.scss
+++ b/src/WebUI/ClientApplication/src/styles/_components.scss
@@ -402,6 +402,19 @@
     }
 }
 
+///////////////////////
+//// Task-Item
+.task-item {
+    background: var(--color-grey-dark-3);
+    margin: 1rem;
+    padding: 1.5rem;
+    text-align: center;
+
+    &__text {
+        
+    }
+}
+
 ////////////////////////////
 //////// CREATE-TASK-FORM
 .create-task-form {
