Implement API for fetching project tasks

--- a/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
+++ b/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
@@ -25,6 +25,45 @@
             <div class="task-category__body">
                 <div class="task-item">
                     <p class="task-item__title">Task 1</p>
+                    <div class="task-item__icons">
+                        <svg class="task-item__icon blue-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
+                        </svg>
+                        <svg class="task-item__icon green-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
+                        </svg>
+                        <svg class="task-item__icon red-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="task-item">
+                    <p class="task-item__title">Task 2</p>
+                    <div class="task-item__icons">
+                        <svg class="task-item__icon blue-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
+                        </svg>
+                        <svg class="task-item__icon green-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
+                        </svg>
+                        <svg class="task-item__icon red-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="task-item">
+                    <p class="task-item__title">Task 3</p>
+                    <div class="task-item__icons">
+                        <svg class="task-item__icon blue-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
+                        </svg>
+                        <svg class="task-item__icon green-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
+                        </svg>
+                        <svg class="task-item__icon red-icon">
+                            <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </div>
