--- a/src/WebUI/ClientApplication/src/styles/_layout.scss
+++ b/src/WebUI/ClientApplication/src/styles/_layout.scss
@@ -114,6 +114,7 @@
     display: flex;
     justify-content: space-between;
     margin: 2rem 0;
+    align-items: start;
     
     &__current-text {
         font-size: 1.7rem;
