--- a/src/WebUI/ClientApplication/src/styles/_shared.scss
+++ b/src/WebUI/ClientApplication/src/styles/_shared.scss
@@ -44,3 +44,19 @@
         background: var(--color-red-dark);
     }
 }
+
+.red-icon {
+    fill: var(--color-red);
+}
+
+.yellow-icon {
+    fill: var(--color-yellow);
+}
+
+.green-icon {
+    fill: var(--color-green);
+}
+
+.blue-icon {
+    fill: var(--color-blue-main-darker);
+}
