Create service for loading tasks

--- a/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
+++ b/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
@@ -23,36 +23,8 @@
                 <h4>Todo</h4>
             </div>
             <div class="task-category__body">
-                <div class="task-item">
-                    <p class="task-item__title">Task 1</p>
-                    <div class="task-item__icons">
-                        <svg class="task-item__icon blue-icon">
-                            <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
-                        </svg>
-                        <svg class="task-item__icon green-icon">
-                            <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
-                        </svg>
-                        <svg class="task-item__icon red-icon">
-                            <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
-                        </svg>
-                    </div>
-                </div>
-                <div class="task-item">
-                    <p class="task-item__title">Task 2</p>
-                    <div class="task-item__icons">
-                        <svg class="task-item__icon blue-icon">
-                            <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
-                        </svg>
-                        <svg class="task-item__icon green-icon">
-                            <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
-                        </svg>
-                        <svg class="task-item__icon red-icon">
-                            <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
-                        </svg>
-                    </div>
-                </div>
-                <div class="task-item">
-                    <p class="task-item__title">Task 3</p>
+                <div *ngFor="let task of todoTasks" class="task-item">
+                    <p class="task-item__title">{{ task.name }}</p>
                     <div class="task-item__icons">
                         <svg class="task-item__icon blue-icon">
                             <use xlink:href="../assets/sprite.svg#icon-briefcase"></use>
